# online_hate-speech_and_complaints_detection

./: .gitattributes  .gitignore  Cleaning.ipynb  Cleaning_and_preprocessed.ipynb  Dockerfile  EDA.ipynb  README.md  main.py  notebook.ipynb  patrick.ipynb  pyproject.toml  requirements.txt  run.sh  saf_tweets_cleaned.csv  train.py  twitter_preprocessor.py
AI_powered_chatbot/: __init__.py  rasa_client.py
AI_powered_chatbot/.rasa/cache/: cache.db
AI_powered_chatbot/.rasa/cache/tmphvzcbzw7/: unexpected_intent_policy.label_quantiles.pkl  unexpected_intent_policy.tf_model.data-00000-of-00001
AI_powered_chatbot/.rasa/cache/tmprdode1pz/: ted_policy.tf_model.index
AI_powered_chatbot/.rasa/cache/tmptimdf6ei/: DIETClassifier.tf_model.index
Desktop/collo final project/: README.md
FastAPI/: .dockerignore  DOCKER_SUMMARY.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  procfile  railway.json  railway.toml  requirements.txt  test_api.py
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/backend/: main.py
Frontend/src/: App.tsx
Frontend/src/components/: Header.tsx  PageTransition.tsx  StatusBadge.tsx
Frontend/src/contexts/: ApiContext.tsx  ThemeContext.tsx
Frontend/src/pages/: AiAssistant.tsx  BatchAnalysis.tsx  HomePage.tsx  SystemInfo.tsx  TweetAnalysis.tsx
Frontend/src/services/: api.ts
Streamlit/: app.py  requirements.txt
Streamlit/AI_powered_chatbot/: actions.py  config.yml  nlu.yml  rasa_client.py  stories.yml
Streamlit/AI_powered_chatbot/.rasa/cache/: cache.db
Streamlit/AI_powered_chatbot/.rasa/cache/tmphvzcbzw7/: unexpected_intent_policy.tf_model.index
Streamlit/AI_powered_chatbot/.rasa/cache/tmprdode1pz/: ted_policy.tf_model.data-00000-of-00001
Streamlit/FastAPI/: main.py
Streamlit/data_prep/: modeling.py
data/: cleaned_safaricom_data.csv  combined_safaricom_data.csv  labeled_data_v2.csv  safaricom_data.csv  safaricom_data_v2.csv
data/processed/: test_processed.csv  train_processed.csv  val_processed.csv
data/raw/: cleaned_and_processed_safaricom_data.csv  labeled_data_openai.csv
data_prep/: data_loader.py  data_prep.py  feature_engineering.py  modeling.py  zero_shot.py
models/: best_model.pkl  model_metadata.pkl  vectorizer.pkl
notebooks/: Data_preprocessing_for_model_finetuning.ipynb  Model_training_and_fine_tuning.ipynb  Zero_shot_Classification.ipynb
online_hate-speech_and_complaints_detection/: EDA.ipynb  modelling.ipynb  saf_tweets.csv  safcom.ipynb
train_scripts/: ml_train.py  transformers.py
